# elastic_boomerang

./: Makefile.am  README.md  animation.bash  beam.gp  beam_adapt.cc  beam_alpha_theta.gp  beam_contour.gp  beam_q_theta.gp  beam_with_point_load.cc  combine_elastic_alpha_theta_q_0.4.gp  combine_elastic_q_theta_alpha_0.375pi.gp  compare_animation.bash  compare_elastic_beam_I_theta_q_0.35_alpha_0.25pi_stable.gp  compare_elastic_beam_I_theta_q_0.35_alpha_0.25pi_unstable.gp  elastic_beam_I_theta_alpha_0.125pi.gp  elastic_beam_I_theta_q_0.35_alpha_0.25pi.gp  elastic_beam_I_theta_q_0.35_alpha_0.25pi_four_branches.gp  elastic_beam_I_theta_q_0.39_alpha_0.125pi_vertical.gp  elastic_beam_I_theta_q_0.39_alpha_0.144pi_vertical_restart.gp  elastic_beam_I_theta_q_0.4.gp  elastic_beam_I_theta_q_0.43_alpha_0.125pi_vertical_restart.gp  elastic_beam_I_theta_q_0.44_alpha_0.125pi_vertical.gp  fourth_elastic_beam_I_theta_q_0.35_alpha_0.25pi_four_branches.gp  general.gp  general1.gp  hao.cc  normal.gp  reparametrise_beam_test.cc  report_elastic_beam_I_theta_q_0.30_alpha_0.125pi.gp  report_elastic_beam_I_theta_q_0.40_alpha_0.125pi.gp  report_elastic_beam_I_theta_q_0.40_alpha_0.125pi_initial.gp  report_elastic_beam_I_theta_q_0.452_alpha_0.125pi_limit_1.gp  report_elastic_beam_I_theta_q_0.452_alpha_0.125pi_limit_2.gp  report_elastic_beam_I_theta_q_0.452_alpha_0.125pi_logx.gp  run.bash  sec_elastic_beam_I_theta_q_0.35_alpha_0.25pi.gp  sec_elastic_beam_I_theta_q_0.35_alpha_0.25pi_four_branches.gp  space_out_lines.bash  test_it.bash  third_elastic_beam_I_theta_q_0.35_alpha_0.25pi_four_branches.gp  (+2 more)
